Refactored all projects